Triggers (#9)
* triggers backend

* some template refactoring, nav menu

* list, delete triggers

* fix css

* comment example trigger

* edit trigger page design

* edit frontend; support for all

* analytics

* fix

* move const to top

* add linter

* ci

* set fixed ubuntu version
