# internal/entity/db.go
@@ -1,10 +1,11 @@
 package entity
 
 type LogDataDB struct {
-	ID            int64  `gorm:"id"`
-	ContainerName string `gorm:"container_name"`
-	LogText       string `gorm:"log_text"`
-	CreatedAt     int64  `gorm:"created_at"`
+	ID                int64  `gorm:"column:id"`
+	ContainerName     string `gorm:"column:container_name"`
+	ContainerFullName string `gorm:"column:container_full_name"`
+	LogText           string `gorm:"column:log_text"`
+	CreatedAt         int64  `gorm:"column:created_at"`
 }
 
 func (LogDataDB) TableName() string {
@@ -12,7 +13,7 @@ func (LogDataDB) TableName() string {
 }
 
 type ContainerDB struct {
-	Name string `gorm:"name"`
+	Name string `gorm:"column:name"`
 }
 
 func (ContainerDB) TableName() string {
